# socrates

./: .dockerignore  02.md  Dockerfile  README.md  cache.py  catalog.json  counter.py  crud.py  git.py  log.json  pyproject.toml  requirements.txt  streamlit.py  streamlit_app.py  students.json  test_catalog.json  tests.json
bot/: builders.py  cache.py  caches.py  main.py  preloads.py  settings.py  types.py  utils.py
bot/builders/: __init__.py  attachments.py  rows.py  texts.py
bot/db/: repository.py
bot/db/models/: __init__.py  groups.py  results.py  students.py  tasks.py  tests.py
bot/db/services/: crud.py  maintenance.py  repository.py
bot/utils/: attachments.py  builders.py  preparation.py  result.py  results.py  rows.py  text.py
cache/: git.py
config/: .env.template
tests/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json
