[project]
name = "socrates"
version = "0.3.5"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "maxapi>=0.9.18",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]

[tool.ruff]
builtins = ["_"]
fix = true
line-length = 100
src = ["bot"]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
